--- a/assets/sass/_step-form.scss
+++ b/assets/sass/_step-form.scss
@@ -8,13 +8,18 @@ $mark-left: -11px;
       border:1px solid #f8f8f8;
       //border-radius: 10px;
       background-color: #fff;
+      position: relative;
     }
 
     &-sidebar{
       //background-color: #304766;
       background-color: #f8f7fa;
+      position: absolute;
       //color:#fff;
       //border-radius: 10px 0 0 10px;
+      @media (min-width: 576px){
+        position: relative;
+      }
     }
   }
 
@@ -35,6 +40,7 @@ $mark-left: -11px;
 
     .edit{
       display: none;
+
     }
 
     .btn-sm{
@@ -102,7 +108,10 @@ $mark-left: -11px;
     }
 
     &-sidebar{
-      padding: 50px 0;
+      padding: 20px 0;
+      @media (min-width: 576px){
+        padding:50px 0;
+      }
     }
 
     &.last{
@@ -139,13 +148,17 @@ $mark-left: -11px;
   }
 
   &-details{
-    padding: 50px 50px;
+    padding: 30px 40px;
 
     position: relative;
     height: 100%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    background-color: #fff;
+    @media (min-width: 768px){
+      padding: 50px 50px;
+    }
   }
 
   &-box{
@@ -160,8 +173,11 @@ $mark-left: -11px;
         margin-bottom: 30px;
         text-transform: uppercase;
         /* font-weight: 700; */
-        letter-spacing: 1px;
-        font-size: 30px;
+        font-size: 24px;
+        @media (min-width: 576px){
+          font-size: 30px;
+          letter-spacing: 1px;
+        }
       }
     }
 
@@ -175,3 +191,19 @@ $mark-left: -11px;
     }
   }
 }
+
+@media (max-width: 767px) {
+  .step{
+    &-list{
+      .edit{
+        display: none!important;
+      }
+    }
+
+    &-title{
+      display: none;
+    }
+  }
+}
+
+
