--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,6 +223,8 @@ html, body {
   .step-box-foot {
     padding: 30px 0 0;
     border-top: 1px solid #ddd; }
+    .step-box-foot .btn-prev {
+      display: none; }
 
 @media (max-width: 767px) {
   .step-list .edit {
