--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,99 @@
   transition-timing-function: linear;
   margin: 0 auto; }
 
+.loader-div {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #202020;
+  background: #202020ad;
+  z-index: 999;
+  opacity: 0;
+  visibility: hidden; }
+  .loader-div.active {
+    opacity: 1;
+    visibility: visible; }
+
+.lds-spinner {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px; }
+
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite; }
+
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: #fff; }
+
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s; }
+
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s; }
+
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s; }
+
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s; }
+
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s; }
+
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s; }
+
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s; }
+
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s; }
+
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s; }
+
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s; }
+
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s; }
+
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s; }
+
+@keyframes lds-spinner {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
 @-webkit-keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg); }
@@ -67,27 +160,79 @@ html, body {
 .font-600 {
   font-weight: 600; }
 
+.font-bold {
+  font-weight: 800; }
+
 .text-medium {
-  font-size: 18px; }
+  font-size: 18px;
+  line-height: 1.8; }
 
 .btn-long img {
   max-height: 16px;
   position: relative;
   top: -1px; }
 
+.btn-xl {
+  padding-top: 10px;
+  padding-bottom: 10px; }
+
+.btn-icon {
+  position: relative;
+  transition: 0.2s all linear; }
+  .btn-icon-right-arrow:before {
+    content: '';
+    display: inline-block;
+    width: 25px;
+    height: 2px;
+    background: #fff;
+    border-radius: 8px 0 0 8px;
+    position: absolute;
+    top: 51%;
+    right: 5px;
+    opacity: 0; }
+
+.btn:hover .btn-icon {
+  margin-left: 5px; }
+  .btn:hover .btn-icon-right-arrow:before {
+    opacity: 1; }
+
 @media (min-width: 576px) {
   .btn-long {
-    min-width: 120px; } }
+    min-width: 120px; }
+  .btn-xl {
+    padding-top: 15px;
+    padding-bottom: 15px; } }
 
 .form-group {
-  margin-bottom: 20px; }
+  margin-bottom: 15px; }
+  .form-group .error-message {
+    margin-bottom: 0;
+    line-height: 1.4;
+    font-size: 15px;
+    margin-top: 2px; }
 
 .form-check-lg .form-check-input {
   width: 1.4em;
   height: 1.4em; }
 
+.cc-number-holder {
+  position: relative; }
+
+.cc-card-identity {
+  position: absolute;
+  top: 50%;
+  right: 6px;
+  transform: translateY(-50%);
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .cc-card-identity img {
+    max-height: 70%; }
+
 .header {
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05); }
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  background-color: #fff; }
 
 .logo-image {
   max-height: 100px; }
@@ -97,8 +242,27 @@ html, body {
 
 .step-form-wrapper {
   border: 1px solid #f8f8f8;
-  background-color: #fff;
   position: relative; }
+  .step-form-wrapper.v2 .step-list {
+    text-align: right;
+    padding-left: 0;
+    padding-right: 30px; }
+    .step-form-wrapper.v2 .step-list:after {
+      left: unset;
+      right: 0; }
+    .step-form-wrapper.v2 .step-list.active .step-mark {
+      right: -14px;
+      left: unset; }
+    .step-form-wrapper.v2 .step-list.completed .step-mark {
+      left: unset;
+      right: -9px; }
+    .step-form-wrapper.v2 .step-list.completed.active .step-mark {
+      right: -14px; }
+    .step-form-wrapper.v2 .step-list-sidebar {
+      margin-right: -22px; }
+  .step-form-wrapper.v2 .step-mark {
+    left: unset;
+    right: -11px; }
 
 .step-form-sidebar {
   background-color: #f8f7fa;
@@ -114,7 +278,7 @@ html, body {
   .step-list:after {
     content: '';
     width: 1px;
-    border: 1px dashed #ddd;
+    border-right: 2px dashed #a09595;
     position: absolute;
     top: 9px;
     left: 0;
@@ -122,13 +286,11 @@ html, body {
   .step-list .edit {
     display: none; }
   .step-list .btn-sm {
-    padding-left: 15px;
-    padding-right: 15px; }
+    line-height: 1; }
     .step-list .btn-sm img {
-      max-height: 13px;
+      max-height: 15px;
       position: relative;
-      top: -1px;
-      margin-right: 5px; }
+      top: -1px; }
   .step-list.active .step-title {
     opacity: 1; }
   .step-list.active .step-mark {
@@ -161,6 +323,12 @@ html, body {
   .step-list.completed .step-title {
     opacity: 1;
     color: #0d6efd; }
+  .step-list.completed.active .step-mark {
+    width: 30px;
+    height: 30px;
+    background: #f8f7fa; }
+    .step-list.completed.active .step-mark img {
+      display: none; }
   .step-list-sidebar {
     padding: 20px 0; }
     @media (min-width: 576px) {
@@ -204,7 +372,7 @@ html, body {
   background-color: #fff; }
   @media (min-width: 768px) {
     .step-details {
-      padding: 50px 50px; } }
+      padding: 30px 50px; } }
 
 .step-box {
   display: none; }
@@ -212,17 +380,20 @@ html, body {
     display: block; }
   .step-box-head h3 {
     border-bottom: 1px solid #ddd;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     text-transform: uppercase;
-    /* font-weight: 700; */
+    font-weight: 800;
     font-size: 24px; }
     @media (min-width: 576px) {
       .step-box-head h3 {
-        font-size: 30px;
+        font-size: 24px;
         letter-spacing: 1px; } }
   .step-box-foot {
     padding: 30px 0 0;
-    border-top: 1px solid #ddd; }
+    border-top: 1px solid #ddd;
+    display: none; }
+    .step-box-foot.active {
+      display: block; }
     .step-box-foot .btn-prev {
       display: none; }
 
@@ -237,6 +408,16 @@ html, body {
   font-weight: 700;
   letter-spacing: 1px; }
 
+.card-header {
+  padding-top: 15px;
+  padding-bottom: 15px; }
+
+.alert .alert-heading img {
+  max-height: 24px; }
+
+.alert hr {
+  margin: 5px 0; }
+
 .main {
   background-color: #f8f7fa; }
   .main-wrapper {
@@ -244,6 +425,65 @@ html, body {
 
 .breadcrumb {
   display: none; }
+
+.section-title {
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 1.4; }
+  @media (min-width: 576px) {
+    .section-title {
+      letter-spacing: 1px; } }
+  .section-title span {
+    position: relative; }
+    .section-title span:after {
+      content: '';
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 60%;
+      height: 4px;
+      background-color: #772f30;
+      border-radius: 8px;
+      bottom: -18px; }
+
+.icon-list {
+  display: flex;
+  align-items: flex-start; }
+  .icon-list img {
+    max-height: 18px;
+    margin-right: 8px;
+    position: relative;
+    top: 3px; }
+
+.card-accordion {
+  margin-bottom: 30px;
+  border-bottom-width: 0; }
+  .card-accordion .card-header {
+    cursor: pointer; }
+  .card-accordion .card-body {
+    display: none; }
+  .card-accordion-icon .plus {
+    display: block; }
+  .card-accordion-icon .minus {
+    display: none; }
+  .card-accordion.active {
+    border-bottom-width: 1px; }
+    .card-accordion.active .card-body {
+      display: block; }
+    .card-accordion.active .card-accordion-icon .plus {
+      display: none; }
+    .card-accordion.active .card-accordion-icon .minus {
+      display: block; }
+
+.otp-wrapper {
+  display: none; }
+  .otp-wrapper.active {
+    display: block; }
+
+.email-wrapper {
+  display: none; }
+  .email-wrapper.active {
+    display: block; }
 
 .footer {
   background-color: #CED4DAFF; }
