waiver section has been designed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@
 
 html, body {
   font-size: 16px;
-  line-height: 1.6;
+  line-height: 2rem;
   font-family: 'Montserrat',sans-serif; }
 
 .font-600 {
@@ -190,6 +190,22 @@ html, body {
     top: 51%;
     right: 5px;
     opacity: 0; }
+
+.btn-close {
+  background: #e5e7eb;
+  border: 1px solid #ddd;
+  color: #202020;
+  padding: 0 !important;
+  opacity: 1;
+  display: inline-flex;
+  width: 35px;
+  height: 35px;
+  align-items: center;
+  justify-content: center; }
+  .btn-close:hover {
+    color: #202020;
+    background: #b5bbc7;
+    opacity: 0.8; }
 
 .btn:hover .btn-icon {
   margin-left: 5px; }
@@ -417,6 +433,25 @@ html, body {
 
 .alert hr {
   margin: 5px 0; }
+
+.form-check-input {
+  border-color: #908b8b;
+  border-width: 2px; }
+  .form-check-input.check-md {
+    width: 1.2rem;
+    height: 1.2rem; }
+
+.callout {
+  padding: 1rem;
+  border: 1px solid #e9ecef;
+  border-left-width: 0.25rem;
+  border-radius: 0.25rem; }
+  .callout-info {
+    border-left-color: #5bc0de; }
+
+.icon-svg-close {
+  width: 20px;
+  height: 20px; }
 
 .main {
   background-color: #f8f7fa; }
