--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,7 @@ html, body {
     .step-form-wrapper.v2 .step-list.completed.active .step-mark {
       right: -14px; }
     .step-form-wrapper.v2 .step-list-sidebar {
-      margin-right: -22px; }
+      margin-right: -12px; }
   .step-form-wrapper.v2 .step-mark {
     left: unset;
     right: -11px; }
@@ -315,6 +315,21 @@ html, body {
       color: #fff; }
     .step-form-wrapper.v4 .step-list-sidebar {
       margin-right: -34px; }
+  .step-form-wrapper.v5 .step-form-main {
+    border: 2px solid #ddd;
+    position: relative; }
+    .step-form-wrapper.v5 .step-form-main:after, .step-form-wrapper.v5 .step-form-main:before {
+      content: '';
+      position: absolute;
+      left: -2px;
+      width: 2px;
+      height: 100%;
+      background-color: #ddd;
+      z-index: 9; }
+    .step-form-wrapper.v5 .step-form-main:after {
+      bottom: 0; }
+    .step-form-wrapper.v5 .step-form-main:before {
+      top: 0; }
 
 .step-form-main {
   background-color: #fff; }
