--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,6 +231,29 @@ html, body {
   width: 1.4em;
   height: 1.4em; }
 
+.form-control-date {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.375rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out; }
+  .form-control-date:focus {
+    color: #212529;
+    background-color: #fff;
+    border-color: #86b7fe;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25); }
+
 .appearance-none {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -250,6 +273,12 @@ html, body {
   align-items: center; }
   .cc-card-identity img {
     max-height: 70%; }
+
+.check-group.focused {
+  outline: 1px solid #e91e63;
+  transform: scale(1.01);
+  border-radius: 4px;
+  background: #fff4f4; }
 
 .header {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
@@ -399,6 +428,8 @@ html, body {
     background: #f8f7fa; }
     .step-list.completed.active .step-mark img {
       display: none; }
+  .step-list.completed.active .edit {
+    display: none; }
   .step-list-sidebar {
     padding: 20px 0; }
     @media (min-width: 576px) {
@@ -449,16 +480,19 @@ html, body {
   display: none; }
   .step-box.active {
     display: block; }
-  .step-box-head h3 {
+  .step-box-head {
     border-bottom: 1px solid #ddd;
     margin-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 800;
-    font-size: 24px; }
-    @media (min-width: 576px) {
-      .step-box-head h3 {
-        font-size: 24px;
-        letter-spacing: 1px; } }
+    padding-bottom: 15px; }
+    .step-box-head h3 {
+      text-transform: uppercase;
+      font-weight: 800;
+      font-size: 24px;
+      margin: 0; }
+      @media (min-width: 576px) {
+        .step-box-head h3 {
+          font-size: 24px;
+          letter-spacing: 1px; } }
   .step-box-foot {
     padding: 30px 0 0;
     border-top: 1px solid #ddd;
@@ -507,6 +541,10 @@ html, body {
 .icon-svg-close {
   width: 20px;
   height: 20px; }
+
+.datepicker td, .datepicker th {
+  width: 35px;
+  height: 28px; }
 
 .main {
   background-color: #f8f7fa; }
