--- a/assets/sass/_step-form.scss
+++ b/assets/sass/_step-form.scss
@@ -290,6 +290,10 @@ $mark-left: -11px;
             }
           }
         }
+
+        .edit{
+          display: none;
+        }
       }
     }
 
@@ -350,17 +354,20 @@ $mark-left: -11px;
 
   &-box{
     display: none;
+
     &.active{
       display: block;
     }
 
     &-head{
+      border-bottom: 1px solid #ddd;
+      margin-bottom: 20px;
+      padding-bottom:15px;
       h3{
-        border-bottom: 1px solid #ddd;
-        margin-bottom: 20px;
         text-transform: uppercase;
         font-weight: 800;
         font-size: 24px;
+        margin:0;
         @media (min-width: 576px){
           font-size: 24px;
           letter-spacing: 1px;
