--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -8,9 +8,9 @@
 @import "head";
 @import "breadcrumb";
 @import "step-form";
-@import "thank";
 @import "bootstrap_custom";
 @import "modal";
 @import "datepicker";
+@import "thankyou";
 @import "main";
 @import "foot";
