--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@
 
 html, body {
   font-size: 16px;
-  line-height: 2rem;
+  line-height: 1.8rem;
   font-family: 'Montserrat',sans-serif; }
 
 .font-600 {
@@ -231,6 +231,15 @@ html, body {
   width: 1.4em;
   height: 1.4em; }
 
+.form-check.platinum .form-check-label {
+  color: #dc3545; }
+
+.form-check.gold .form-check-label {
+  color: #ffc107; }
+
+.form-check.silver .form-check-label {
+  color: #0dcaf0; }
+
 .form-control-date {
   display: block;
   width: 100%;
@@ -283,9 +292,20 @@ html, body {
 .header {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   background-color: #fff; }
+  .header a.mb-3 {
+    margin-bottom: 0 !important; }
 
 .logo-image {
-  max-height: 100px; }
+  max-height: 60px; }
+  @media (min-width: 576px) {
+    .logo-image {
+      max-height: 100px; } }
+
+.logo-power-ms {
+  max-height: 40px; }
+  @media (min-width: 576px) {
+    .logo-power-ms {
+      max-height: 60px; } }
 
 .breadcrumb {
   background-color: #212529; }
@@ -508,11 +528,6 @@ html, body {
   .step-title {
     display: none; } }
 
-.text-thank {
-  font-size: 32px;
-  font-weight: 700;
-  letter-spacing: 1px; }
-
 .card-header {
   padding-top: 15px;
   padding-bottom: 15px; }
@@ -545,6 +560,157 @@ html, body {
 .datepicker td, .datepicker th {
   width: 35px;
   height: 28px; }
+
+@media (min-width: 768px) {
+  .main-wrapper.thank-page {
+    margin-top: 30px; } }
+
+.main-wrapper.thank-page.v2 {
+  margin: 0;
+  padding: 0; }
+
+.thank-wrapper-inpage {
+  display: none; }
+  .thank-wrapper-inpage.active {
+    display: block; }
+
+.thank-wrapper.v2 .thank-message {
+  background-color: #f2f2f2;
+  padding: 15px;
+  border: 0; }
+  @media (min-width: 768px) {
+    .thank-wrapper.v2 .thank-message {
+      padding: 40px; } }
+
+.thank-message {
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 30px;
+  padding-left: 15px;
+  padding-right: 15px; }
+  .thank-message .icon-holder img {
+    max-width: 75px; }
+  .thank-message-text .thank-text {
+    font-size: 28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-bottom: 10px;
+    color: #179953; }
+    @media (min-width: 768px) {
+      .thank-message-text .thank-text {
+        font-size: 42px; } }
+  .thank-message-text .order-number {
+    font-size: 18px; }
+
+.thank-details .sidebar-block {
+  overflow: hidden;
+  border: 1px solid #8b8b8b;
+  border-radius: 10px; }
+  .thank-details .sidebar-block-title {
+    background-color: #8b8b8b;
+    margin: 0;
+    color: #fff; }
+  .thank-details .sidebar-block-description {
+    background-color: #fff;
+    min-height: 160px; }
+
+.thank-foot {
+  position: static; }
+
+.event-title {
+  font-size: 22px;
+  font-weight: 600; }
+  @media (min-width: 768px) {
+    .event-title {
+      font-size: 32px; } }
+
+.social-share {
+  display: flex;
+  align-items: center; }
+  @media (min-width: 768px) {
+    .social-share {
+      padding-top: 0px; } }
+
+.social-share span {
+  font-size: 15px;
+  font-weight: 600;
+  color: #000; }
+  @media (min-width: 768px) {
+    .social-share span {
+      font-size: 20px; } }
+
+.social-share-ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center; }
+
+.social-share-ul li a {
+  display: block;
+  padding: 0 5px; }
+  .social-share-ul li a img {
+    max-width: 30px; }
+  .social-share-ul li a:hover {
+    opacity: 0.8; }
+  @media (min-width: 768px) {
+    .social-share-ul li a img {
+      max-width: 50px; } }
+
+.title-indication {
+  font-weight: 600;
+  letter-spacing: 2px; }
+
+.modal-confirm {
+  top: 44%;
+  transform: translateY(-50%) !important; }
+
+.event-info-box {
+  padding: 30px 25px;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  margin-bottom: 20px;
+  align-items: center; }
+  .event-info-box-image {
+    width: 80px;
+    height: 80px;
+    border-radius: 8px;
+    background-color: #dae6df;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center; }
+    .event-info-box-image img {
+      max-width: 60%; }
+  .event-info-box-body {
+    padding-bottom: 0; }
+  .event-info-box.v2 {
+    padding: 0;
+    border: 0;
+    height: auto;
+    align-items: center; }
+    .event-info-box.v2 .event-info-box-body {
+      padding: 0; }
+  @media (min-width: 768px) {
+    .event-info-box {
+      margin-bottom: 0; } }
+
+.text-black {
+  color: #202020; }
+
+.text-medium {
+  font-size: 18px; }
+
+.font-600 {
+  font-weight: 600; }
+
+.extra-info {
+  max-width: 750px;
+  margin: 0 auto;
+  font-size: 18px; }
+  .extra-info-row img {
+    max-width: 45px; }
+    @media (min-width: 576px) {
+      .extra-info-row img {
+        max-width: 65px; } }
 
 .main {
   background-color: #f8f7fa; }
@@ -613,5 +779,9 @@ html, body {
   .email-wrapper.active {
     display: block; }
 
+.secure-alert img {
+  max-height: 22px; }
+
 .footer {
-  background-color: #CED4DAFF; }
+  background-color: #050b0e;
+  color: #fff; }
