--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -37,6 +37,7 @@
 
 .icon{
   &-list{
+    line-height: 1.8;
     &-group{
 
     }
@@ -46,7 +47,7 @@
       max-height:18px;
       margin-right:8px;
       position: relative;
-      top:3px;
+      top:4px;
     }
   }
 }
