--- a/assets/sass/_step-form.scss
+++ b/assets/sass/_step-form.scss
@@ -152,7 +152,7 @@ $mark-left: -11px;
         .step{
           &-form{
             &-main{
-              border:2px solid #ddd;
+              border:1px solid #ddd;
               position: relative;
 
               &:after,&:before{
@@ -161,14 +161,22 @@ $mark-left: -11px;
                 left:-2px;
                 width:2px;
                 height:100%;
-                background-color: #ddd;
+                background-color: transparent;
                 z-index: 9;
+
+                @media (min-width: 992px){
+                  background-color: #ddd;
+                }
               }
               &:after{
                 bottom:0;
               }
               &:before{
                 top:0;
+              }
+
+              @media (min-width: 992px) {
+                border-width:2px;
               }
             }
 
@@ -188,7 +196,9 @@ $mark-left: -11px;
       position: absolute;
       //color:#fff;
       //border-radius: 10px 0 0 10px;
-      @media (min-width: 576px){
+      display: none;
+      @media (min-width: 992px){
+        display: block;
         position: relative;
       }
     }
@@ -339,7 +349,7 @@ $mark-left: -11px;
   }
 
   &-details{
-    padding: 30px 40px;
+    padding: 30px 30px;
 
     position: relative;
     height: 100%;
@@ -366,7 +376,7 @@ $mark-left: -11px;
       h3{
         text-transform: uppercase;
         font-weight: 800;
-        font-size: 24px;
+        font-size: 22px;
         margin:0;
         @media (min-width: 576px){
           font-size: 24px;
