--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -124,3 +124,10 @@
     }
   }
 }
+
+.auto-renew-wrapper{
+  padding: 8px 15px;
+  margin-top: -16px;
+  background-color: #f2f2f2;
+  border-radius: 0 0 4px 4px;
+}
