--- a/assets/sass/_utility.scss
+++ b/assets/sass/_utility.scss
@@ -6,7 +6,24 @@
   font-weight: 800;
 }
 
-.text-medium{
-  font-size: 18px;
-  line-height: 1.8;
+.text{
+  &-medium{
+    font-size: 18px;
+    line-height: 1.8;
+  }
+  &-teal{
+    color: #009688;
+  }
+  &-grey{
+    color:#6e6e6e;
+  }
+}
+
+.w{
+  &-75{
+    width:auto!important;
+    @media (min-width: 768px) {
+      width:75%!important;
+    }
+  }
 }
