--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,6 +584,11 @@ html, body {
   width: 20px;
   height: 20px; }
 
+.membership-alert {
+  border: 1px solid #f2f2f2;
+  padding: 15px 20px;
+  background: #f8f8f8; }
+
 .datepicker td, .datepicker th {
   width: 35px;
   height: 28px; }
