--- a/assets/sass/_form.scss
+++ b/assets/sass/_form.scss
@@ -53,6 +53,10 @@
   }
 
   &-control{
+    &.field-v2{
+      border:1px solid #1b1c1d;
+      padding:0.575rem 0.75rem;
+    }
     &-date{
       display: block;
       width: 100%;
@@ -64,6 +68,7 @@
       background-color: #fff;
       background-clip: padding-box;
       border: 1px solid #ced4da;
+      //border:2px solid #888888;
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
