--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,6 +7,7 @@
 @import "form";
 @import "head";
 @import "breadcrumb";
+@import "animate";
 @import "step-form";
 @import "bootstrap_custom";
 @import "modal";
