--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -41,13 +41,12 @@
     &-group{
 
     }
-    display: flex;
-    align-items: flex-start;
+
     img{
       max-height:18px;
-      margin-right:8px;
+      margin-right:7px;
       position: relative;
-      top:4px;
+      top:-2px;
     }
   }
 }
@@ -127,7 +126,42 @@
 
 .auto-renew-wrapper{
   padding: 8px 15px;
-  margin-top: -16px;
   background-color: #f2f2f2;
   border-radius: 0 0 4px 4px;
+  border: 1px solid #ddd;
+  border-top: 0;
+}
+
+.after-hr{
+  margin-top:-16px;
+}
+
+.donation{
+  &-wrapper{
+    &-title{
+      background: #2196f3;
+      color: #fff;
+      margin: -17px;
+      margin-bottom: 10px;
+      padding: 8px 15px;
+      text-transform: uppercase;
+    }
+
+    .input{
+      &-group{
+        &-text{
+          //font-size: 1.4rem;
+          //padding: 0.4rem 1rem;
+          border-top-right-radius: 0;
+          border-bottom-right-radius: 0;
+        }
+
+        .form{
+          &-control{
+
+          }
+        }
+      }
+    }
+  }
 }
