--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -8,6 +8,7 @@
 @import "head";
 @import "breadcrumb";
 @import "animate";
+@import "select2";
 @import "step-form";
 @import "bootstrap_custom";
 @import "modal";
