--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,6 +384,19 @@ html, body {
   line-height: 2;
 }
 
+.select-box {
+  position: relative;
+}
+
+.select-box .ajax-loader {
+  display: inline-block;
+  position: absolute;
+  max-height: 20px;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .header {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   background-color: #fff;
@@ -587,6 +600,25 @@ html, body {
     transform: scaleX(1);
   }
 }
+.select2-container--default .select2-selection--single {
+  background: transparent;
+  border-color: #838383;
+  border-radius: 0.375rem;
+  height: 38px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+  height: 38px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  line-height: 38px;
+}
+
+.select2-container--default .select2-search--dropdown .select2-search__field {
+  padding: 0.375rem 0.75rem;
+}
+
 .step-form-wrapper {
   border: 1px solid #f8f8f8;
   position: relative;
