--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,6 +397,10 @@ html, body {
   transform: translateY(-50%);
 }
 
+.select2-container--default .select2-selection--single .select2-selection__placeholder {
+  color: #444;
+}
+
 .header {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   background-color: #fff;
