--- a/assets/sass/_form.scss
+++ b/assets/sass/_form.scss
@@ -170,3 +170,7 @@
   top: 50%;
   transform: translateY(-50%);
 }
+
+.select2-container--default .select2-selection--single .select2-selection__placeholder{
+  color:#444;
+}
