ui issues has been fixed

--- a/assets/sass/_select2.scss
+++ b/assets/sass/_select2.scss
@@ -13,3 +13,6 @@
 .select2-container--default .select2-search--dropdown .select2-search__field {
   padding:.375rem .75rem;
 }
+.select2-container{
+  display: block;
+}
