--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -623,6 +623,10 @@ html, body {
   padding: 0.375rem 0.75rem;
 }
 
+.select2-container {
+  display: block;
+}
+
 .step-form-wrapper {
   border: 1px solid #f8f8f8;
   position: relative;
@@ -1268,6 +1272,18 @@ html, body {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
+.alert-note {
+  margin: 0 -1rem -1rem -1rem;
+  border-radius: 0 0 0.375rem 0.375rem;
+  font-size: 0.85rem;
+  line-height: 1.3;
+  padding: 0.6rem 1rem;
+}
+
+.iti__selected-flag {
+  border-right: 1px solid #ddd;
+}
+
 .footer {
   background-color: #050b0e;
   color: #fff;
