--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -165,3 +165,17 @@
     }
   }
 }
+
+.alert{
+  &-note{
+    margin:0 -1rem -1rem -1rem;
+    border-radius: 0 0 0.375rem 0.375rem;
+    font-size:.85rem;
+    line-height: 1.3;
+    padding:.6rem 1rem;
+  }
+}
+
+.iti__selected-flag{
+  border-right:1px solid #ddd;
+}
