--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,9 @@ html, body {
 .form-group.required-group .required-mark {
   display: inline-block;
 }
+.form-group:not(.required-group) .text-danger.error-message {
+  color: #3f51b5 !important;
+}
 .form-check-lg .form-check-input {
   width: 1.4em;
   height: 1.4em;
@@ -1282,6 +1285,13 @@ html, body {
 
 .iti__selected-flag {
   border-right: 1px solid #ddd;
+}
+
+.hidden-div {
+  display: none;
+}
+.hidden-div.active {
+  display: block;
 }
 
 .footer {
