--- a/assets/sass/_form.scss
+++ b/assets/sass/_form.scss
@@ -92,6 +92,14 @@
       }
     }
 
+    &.street-address-pin{
+      position: relative;
+      background-image: url("https://res.cloudinary.com/secure-api/image/upload/v1683720094/secure-api/Secure-api/images/mjomeg9bme4yuh2tlr5q.png");
+      background-repeat: no-repeat;
+      background-position: 98% 6px;
+      background-size: auto;
+    }
+
   }
 
   &-select{
